# uiuc_cs513_project

./: .gitignore  README.md  build.sh  columns.csv  data.sqlite  datacleaning_test.ipynb  part_1.md  queries.sql
part_2/cleaning-suite/: README.md  pyproject.toml
part_2/cleaning-suite/src/: test.ipynb
part_2/cleaning-suite/src/checker/: __init__.py  __main__.py
part_2/cleaning-suite/src/checker/checks/: dish.py  menu.py  menu_item_domain.py  menu_items.py  menu_pages.py  table_counts.py
part_2/cleaning-suite/src/checker/models/: __init__.py  dish.py  menu.py  menu_item.py  menu_page.py
part_2/cleaning-suite/src/cleaner/: __main__.py
part_2/cleaning-suite/src/importer/: __init__.py  __main__.py  csv.py  dish.py  do_import.py  menu.py
part_2/cleaning-suite/src/importer2/: __init__.py  __main__.py  cs513_import_operation.py  dish_import_operation.py  menu_import_operation.py  open_refine_operation.py  operation.py  operation_list.py  project_cleanup_operation.py  server.py  tasks.py
part_2/cleaning-suite/src/importer2/cs513_operations/: __init__.py  cs513_import_operation.py  dish_import_operation.py  menu_import_operation.py  menu_item_import_operation.py
part_2/cleaning-suite/src/importer2/cs513_task/: __init__.py  cs513_export_task.py  cs513_ic_cleanup_task.py  cs513_ic_task.py  cs513_import_task.py  cs513_report_task.py  cs513_sql_task.py  cs513_verification_task.py  dish_import_task.py  dish_report_task.py  dish_sql_task.py  dish_verification_task.py  dish_view_sql_task.py  (+16 more)
part_2/cleaning-suite/src/quality_checker/: __init__.py  __main__.py
(+76 files in other folders)
