[project]
name = "cleaning-suite"
version = "0.1.0"
description = "Various utilities to clean and check data"
authors = [
    { name = "Aaron Schlesinger", email = "aschle2@illinois.edu" },
    { name = "Dave Pankros", email = "dpankros@illinois.edu" },
]
dependencies = ["click>=8.1.7", "tabulate>=0.9.0"]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"quality-checker" = "quality_checker:main"
"cleaner" = "cleaner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quality_checker"]
